<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base"
    tools:context=".EditActivityContent">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="117dp"
        android:layout_height="151dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/icono_base" />

    <TextView
        android:id="@+id/alarma_item1"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:layout_marginStart="172dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/alarms_item1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="227dp"
        android:layout_height="151dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        app:srcCompat="@drawable/calendario" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/clock_item1"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/clock_item1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/clock_item2"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/clock_item2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/clock_item3"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/clock_item3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/clock_item4"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/clock_item4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="275dp"
        android:fontFamily="serif"
        android:padding="1dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/labels"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="334dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        android:alpha="0.6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/audio_icon"
        android:layout_width="207dp"
        android:layout_height="91dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/icono_voz" />

    <EditText
        android:id="@+id/edit_text_detail"
        android:layout_width="297dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887"
        android:alpha="0.6"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <ImageView
        android:id="@+id/btnSave"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/corner_turquesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="29dp"
        android:text="@string/btn_guardar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <ImageView
        android:id="@+id/btnCancel"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/corner_ping"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:text="@string/btn_cencelar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />

</androidx.constraintlayout.widget.ConstraintLayout>